# traderbot

./: .dockerignore  .gitignore  DEPLOYMENT.md  FEATURES.md  Makefile  TODO.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04251e479d5d_initial_schema.py  08984ea9d2c2_seed_portfolio_permissions.py  479c6dbb1946_seed_trading_permissions.py  4eea660daade_add_stop_price_to_orders.py  577603bf8426_seed_default_roles_and_permissions.py  65270f6b25dc_phase_5_market_data_storage.py  8f3b6a1c2d4e_seed_strategy_permissions.py  b3f1a9c7d2e5_phase_8_risk_engine_schema.py  c4a2e8f91b3d_seed_risk_permissions.py  d1a4c7f2e6b8_add_drawdown_derisk_state.py  e740ef33a2aa_phase_4_trading_domain_schema.py
backend/app/: main.py
backend/app/application/ports/: __init__.py  broadcaster.py  market_data_repository.py  news_feed_client.py  password_hasher.py  token_blacklist.py  token_service.py  unit_of_work.py
backend/app/application/services/: backtest_engine.py  execution_service.py  market_data_service.py  news_feed_registry.py  order_service.py  portfolio_service.py  risk_engine.py  signal_manager.py  strategy_engine.py  strategy_loader.py  trading_service.py
backend/app/core/: config.py  logging.py
backend/app/domain/: exceptions.py
backend/app/domain/audit/: entities.py  repositories.py
backend/app/domain/entities/: role.py  (+4 more)
backend/tests/: conftest.py
backend/tests/fakes/: fake_binance_http_client.py  fake_exchange_client.py  fake_market_data_repository.py  fake_market_data_stream.py  fake_news_feed_client.py  fake_repositories.py  fake_security.py  fake_unit_of_work.py  fake_websocket.py
(+403 files in other folders)
