[project]
name = "traderbot-backend"
version = "0.1.0"
description = "Backend foundation for the algorithmic trading platform (Phase 1)"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy>=2.0.35,<2.1.0",
  "alembic>=1.13.3,<1.14.0",
  "asyncpg>=0.30.0,<0.31.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "redis>=5.1.1,<6.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "python-multipart>=0.0.12,<0.1.0",
  "httpx>=0.27.2,<0.28.0",
  "websockets>=15.0.1,<16.0.0",
  "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
  "binance-sdk-spot>=10.0.0,<11.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "aiosqlite>=0.20.0,<0.21.0",
  "ruff>=0.7.0,<0.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI pattern requires `Depends(...)` / `Query(...)` as argument
# defaults — that's the framework's intended usage, not the mutable-default
# footgun B008 otherwise warns about.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security", "fastapi.Header"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
